# midoku-community-extensions

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  index.json  index.min.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_report_issue.yaml  02_request_source.yaml  03_report_url_change.yaml  04_report_dead_source.yaml  05_request_feature.yaml  06_request_meta.yaml
.github/workflows/: build.yaml  package.sh  test-and-build.yaml  test.yaml
.zed/: settings.json
extensions/: multi.mangadex-v0.1.0.mix
src/multi/mangadex/: Cargo.toml  build.rs
src/multi/mangadex/res/: filters.json  languages.json  settings.json  source.json
src/multi/mangadex/src/: bindings.rs  host_settings.rs  lib.rs
src/multi/mangadex/src/parse/: mod.rs  parse_chapter.rs  parse_manga.rs
src/multi/mangadex/src/schema/: chapter.rs  manga.rs  mod.rs  page.rs
src/multi/mangadex/src/utils/: miniserde_trait.rs  mod.rs  parse.rs  url_encode.rs
src/multi/mangadex/tests/: integration.rs
src/multi/mangadex/wit/: world.wit
