[workspace]
members = ["src/*/*"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
license = "Apache-2.0 OR MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
codegen-units = 1
