[package]
name = "midoku-multi-mangadex"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
miniserde = "0.1.39"
speedate = "0.14.0"
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[build-dependencies]
wit-deps = "0.3.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "midoku:midoku-multi-mangadex"

[package.metadata.component.target.dependencies]
"midoku:bindings" = { path = "wit/deps/midoku-bindings" }
"midoku:http" = { path = "wit/deps/midoku-http" }
"midoku:limiter" = { path = "wit/deps/midoku-limiter" }
"midoku:types" = { path = "wit/deps/midoku-types" }
